[tool.poetry]
name = "manim-playground"
version = "0.1.0"
description = ""
authors = ["retif <oleks.kuksenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
manim = "^0.18.1"
manimgl = "^1.7.0"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
